infrastructure/03-apps/radicale/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: radicale
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 57238
        fsGroup: 57238
      containers:
        - name: radicale
          image: tomaskavka/radicale:3.4.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 57238
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5232
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radicale-data-pvc
