infrastructure/03-apps/radicale/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
spec:
  selector:
    app: radicale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5232
