infrastructure/03-apps/radicale/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: radicale-hardened
  namespace: radicale
spec:
  endpointSelector: {}
  ingress:
    # 1. Cilium Ingress & Traefik to Radicale
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5232"
              protocol: TCP
    - fromEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": traefik }
      toPorts:
        - ports: 
            - port: "5232"
              protocol: TCP
            - port: "8089"
              protocol: TCP
            - port: "80"
              protocol: TCP
    # 2. Local Namespace Traffic
    - fromEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": radicale }
    # 3. Monitoring (Alloy)
    - fromEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": alloy }
  egress:
    # 1. Local Namespace Traffic
    - toEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": radicale }
    # 2. DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules: { dns: [{ matchPattern: "*" }] }
    # 3. API Server
    - toEntities: [kube-apiserver]
    # 4. Keycloak (Auth Namespace)
    - toEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": auth }
      toPorts:
        - ports: [{ port: "8080", protocol: TCP }]
    # 5. External access (ACME validation and updates)
    - toEntities: [world]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
